FIX: bootstrap + readability
Upgrade the readability and the bootstrap in those files

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,7 +14,6 @@
 .legalesMention {
 	height: auto;
 }
-
 .whiteBox {
 	border-radius: 10px;
 	box-shadow: 0px 0px 25px 0.5px;
@@ -60,6 +59,9 @@
 @media (min-width: 1290px) {
 	.menuBurgerSmallScreen {
 		display: none;
+	}
+	.mentionsLégales {
+		min-height: 51.6vh;
 	}
 
 	.header {
@@ -172,6 +174,9 @@
 		.navbar {
 			font-size: 18px;
 		}
+	}
+	.mentionsLégales {
+		min-height: 56.4vh;
 	}
 	.projectCard {
 		.portfolioButton {
@@ -297,6 +302,9 @@
 		.navbar {
 			font-size: 12px;
 		}
+	}
+	.mentionsLégales {
+		min-height: 56.4vh;
 	}
 	.myGithubProfile {
 		span {
